--- a/src/main/webapp/mooc-integration/openedx_additional_html.html
+++ b/src/main/webapp/mooc-integration/openedx_additional_html.html
@@ -8,7 +8,7 @@ Paste in appropriate sections (adapt URL to DataTrackerServlet below):
 -->
 
 
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<!-- script src="https://code.jquery.com/jquery-1.12.4.js"></script /-->
 <script type="text/javascript">
 	var timeoutInterval = 30000;
 	var userNameDefault = "Guest";
